# hello-django

./: Makefile  pyproject.toml
hello_django/: settings.py  urls.py  views.py
hello_django/calc/: models.py  urls.py  views.py
hello_django/calc/migrations/: 0001_initial.py
hello_django/calc/templates/: calc.html
