[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["eg-b <yeg.baranov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
